# DaWood

DaWoodSync/: CMakeLists.txt  app_win32.rc  crc32.cpp  crc32.h  dataprocessing.cpp  dataprocessing.h  device.cpp  device.h  devlogs.cpp  devlogs.h  firmware_read.cpp  firmware_read.h  inklin.cpp  inklin.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myserialport.cpp  myserialport.h  pc_database.cpp  pc_database.h  piezo.cpp  piezo.h  resource.qrc  tblconfig.cpp  tblconfig.h  thermo.cpp  thermo.h  utilites.cpp  utilites.h
Driver/: readme.txt
Setup/: dawoodsetupInit.iss
